fix html, head and body z-indexes

--- a/head.scss
+++ b/head.scss
@@ -1,4 +1,4 @@
-$version: 'v0.3.0';
+$version: 'v0.3.1';
 $font: 14px/1.5 Consolas,monaco,monospace;
 $color-base: #673AB7;
 $color-meta: #9C27B0;
@@ -82,6 +82,8 @@ body{
     position: absolute;
     @include base();
     @include singleline();
+    //super high value to ensure top level visibility
+    z-index: 99999999;
   }
 
   &:before{ top:0; left: 0 }
